[package]
name = "weak-hardware-booster"
version = "0.1.0"
authors = ["Daouda Abdoul Anzize <nexusstudio100@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Rust-powered mobile gaming CPU optimization runtime using ACCD-OS convergence architecture"
repository = "https://github.com/Tryboy869/weak-hardware-booster"
keywords = ["game-engine", "mobile", "optimization", "particle-system", "performance"]
categories = ["game-development", "simulation", "embedded"]
readme = "README.md"

[lib]
name = "weak_hardware_booster"
crate-type = ["cdylib", "rlib"]  # Dynamic library for FFI + Rust library

[dependencies]
# No external dependencies for core library (zero-cost abstractions)

[dev-dependencies]
criterion = "0.5"  # For benchmarking

[[bench]]
name = "particle_benchmark"
harness = false

[[example]]
name = "benchmark_explosion"
path = "examples/benchmark_explosion.rs"

[profile.release]
opt-level = 3              # Maximum optimization
lto = true                 # Link-time optimization
codegen-units = 1          # Better optimization (slower compile)
panic = 'abort'            # Remove unwinding overhead
strip = true               # Remove debug symbols
overflow-checks = false    # Disable overflow checks in release

[profile.bench]
inherits = "release"

# FFI exports for Unity/Unreal integration
[lib]
crate-type = ["cdylib"]

# Platform-specific optimizations
[target.'cfg(target_arch = "aarch64")'.dependencies]
# ARM64 NEON optimizations (future)

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific dependencies (future)

[target.'cfg(target_os = "ios")'.dependencies]
# iOS-specific dependencies (future)